# bevy-aunty-survivor

./: Cargo.toml  README.md
.github/workflows/: release.yaml
examples/: physics_demo.rs
src/: audio.rs  lib.rs  main.rs
src/game/: mod.rs
src/game/board/: mod.rs
src/game/interactions/: mod.rs
src/game/pieces/: mod.rs
src/game/pieces/enemies/: mod.rs
src/game/pieces/items/: mod.rs
src/game/pieces/player/: mod.rs
src/menu/: mod.rs  plugin.rs
web/: index.html
